tests/baselines/reference/targetTypeCastTest(strict=true).errors.txt
targetTypeCastTest.ts(1,13): error TS2300: Duplicate identifier 'Point'.
targetTypeCastTest.ts(3,10): error TS2300: Duplicate identifier 'Point'.
targetTypeCastTest.ts(3,16): error TS7006: Parameter 'x' implicitly has an 'any' type.
targetTypeCastTest.ts(3,19): error TS7006: Parameter 'y' implicitly has an 'any' type.
targetTypeCastTest.ts(4,5): error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
targetTypeCastTest.ts(5,5): error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
targetTypeCastTest.ts(23,15): error TS7006: Parameter 'x' implicitly has an 'any' type.
targetTypeCastTest.ts(23,17): error TS7006: Parameter 'y' implicitly has an 'any' type.


==== targetTypeCastTest.ts (8 errors) ====
    declare var Point: { new(x:number, y:number): {x: number; y: number; }; }
                ~~~~~
!!! error TS2300: Duplicate identifier 'Point'.
    
    function Point(x, y) {
             ~~~~~
!!! error TS2300: Duplicate identifier 'Point'.
                   ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
                      ~
!!! error TS7006: Parameter 'y' implicitly has an 'any' type.
        this.x = x;
        ~~~~
!!! error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
        this.y = y;   
        ~~~~
!!! error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
    }
    
    interface Adder {
        (x: number, y: number): number;   
    }
    
    var add = <Adder>function(x,y) {    return x+ y;   }
    
    
    interface Adder2 {
        (x: number, y: number): number;   
    }
    
    var add2: Adder2 = function(x,y) {
        return 0;
    }
    
    function add3(x,y) {x}
                  ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
                    ~
!!! error TS7006: Parameter 'y' implicitly has an 'any' type.